# manufacture-plugin-template

./: Cargo.toml  README.md
src/: commands.rs  comp.rs  events.rs  lib.rs  main.rs  prelude.rs  resources.rs  storage.rs  systems.rs
